式生成器に型生成機能を追加

--- a/generator/old_from_type/Makefile
+++ b/generator/old_from_type/Makefile
@@ -1,4 +1,4 @@
-SOURCES = syntax.ml env.ml type.ml input.ml typing.ml parser.mly lexer.mll gen.ml main.ml
+SOURCES = syntax.ml env.ml type.ml gen_type.ml input.ml typing.ml parser.mly lexer.mll gen.ml main.ml
 RESULT = generator
 OCAMLMAKEFILE = ~/include/OCamlMakefile
 include $(OCAMLMAKEFILE)
